added get-matching-recipes API
